--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap");
+* {
+  box-sizing: border-box; }
+
 body {
-  margin: 0; }
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  color: #fff; }
 
 /*************** HEADER ************/
 nav {
@@ -25,8 +31,7 @@ nav {
       font-weight: 500;
       text-decoration: none;
       padding: 7px 16px;
-      transition: 0.3s;
-      font-family: "Montserrat", sans-serif; }
+      transition: 0.3s; }
 
 /******************* MAIN *******************/
 h1 {
@@ -34,7 +39,6 @@ h1 {
   font-weight: 500; }
 
 P {
-  font-family: "Montserrat", sans-serif;
   line-height: 26px; }
 
 #main {
@@ -43,10 +47,10 @@ P {
   padding: 50px; }
   #main .info-intro {
     display: flex;
-    flex-direction: column;
-    font-family: "Montserrat", sans-serif; }
+    flex-direction: column; }
     #main .info-intro div h2 {
       color: #fff;
+      font-family: "Montserrat", sans-serif;
       margin-bottom: 40px;
       font-size: 48px;
       font-weight: 800; }
@@ -60,24 +64,23 @@ P {
   height: auto; }
 
 /*********** ABOUT US ************/
-#about {
-  font-family: "Montserrat", sans-serif; }
-  #about .container {
+#about .container {
+  display: flex;
+  flex-direction: column; }
+  #about .container .titulo {
+    color: #283d50;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    margin: 0px, 0, 20px 0;
     display: flex;
-    flex-direction: column; }
-    #about .container .titulo {
-      color: #283d50;
-      text-align: center;
-      margin: 0px, 0, 20px 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center; }
-      #about .container .titulo .titulo p {
-        font-size: 15px;
-        padding-bottom: 60px;
-        color: #556877;
-        width: 50%; }
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    #about .container .titulo .titulo p {
+      font-size: 15px;
+      padding-bottom: 60px;
+      color: #556877;
+      width: 50%; }
 
 .box-1 {
   display: flex;
@@ -98,3 +101,19 @@ P {
 .img-about img {
   height: auto;
   width: 100%; }
+
+/****************** WHY CHOOSE US?*******************/
+.choose {
+  background-color: #004a99;
+  padding: 60px 0; }
+  .choose div h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    text-align: center;
+    font-weight: 500; }
+  .choose p {
+    text-align: center;
+    font-size: 15px; }
+  .choose .container-cards {
+    display: flex;
+    background-color: #00458f; }
